--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.avalon.cornerstone.connection</groupId>
+            <artifactId>cornerstone-connection</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avalon.cornerstone.connection</groupId>
+            <artifactId>cornerstone-connection</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
     <build>
